--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   background-color: hsl(225, 100%, 94%);
   background-image: url(./images/pattern-background-mobile.svg);
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
 }
 .container {
   background-color: #ffffff;
@@ -57,7 +57,6 @@ h1 {
   text-align: left;
   border-radius: 11px;
   width: 100%;
-  height: 4.8rem;
 }
 .plan-box-left {
   display: flex;
@@ -108,11 +107,11 @@ h1 {
 .btn-cancel:active {
   color: hsl(245, 60%, 60%);
 }
-@media (min-width: 23em) {
+@media (min-width: 865px) {
   body {
     background-image: url(./images/pattern-background-desktop.svg);
   }
   .container {
-    max-width: 45rem;
+    max-width: 450px;
   }
 }
